# Rusty-Pi

./: .gitignore  AGENTS.md  EXECUTION-EVIDENCE.md  MAINTENANCE.md  README.md  SPEC.md  tickets.md
docs/: architecture.md  capabilities.md  (+1 more)
rusty-pi/: Cargo.toml
rusty-pi/docs/: known-issues.md  tui.md
rusty-pi/src/: lib.rs  main.rs  test_support.rs
rusty-pi/src/agent/: engine.rs  event_tests.rs  events.rs  mod.rs  session.rs  types.rs
rusty-pi/src/agent/session/: jsonl.rs  memory.rs  mod.rs  session.rs  storage.rs  types.rs
rusty-pi/src/ai/: mock.rs  mod.rs  stream.rs  types.rs
rusty-pi/src/ai/auth/: mod.rs  openai_codex.rs
rusty-pi/src/ai/providers/: deepseek.rs  mod.rs  openai_codex.rs
rusty-pi/src/coding_agent/: command.rs  mod.rs  picker.rs  prompt_session.rs  prompt_templates.rs  repl.rs  session_controller.rs  skills.rs  system_prompt.rs
rusty-pi/src/coding_agent/tools/: bash.rs  edit.rs  mime.rs  mod.rs  read.rs  truncate.rs  write.rs
rusty-pi/src/format/: mod.rs  out.rs
rusty-pi/src/frontends/: mod.rs  print.rs
rusty-pi/src/orchestrator/: mod.rs
rusty-pi/src/tui/: app.rs  command_driver.rs  mod.rs  print_frontend.rs  terminal_guard.rs
rusty-pi/src/tui/snapshots/: rusty_pi__tui__app__tests__idle_v2.snap  rusty_pi__tui__app__tests__snapshot_aborted.snap  rusty_pi__tui__app__tests__snapshot_idle.snap  rusty_pi__tui__app__tests__snapshot_narrow_terminal.snap  rusty_pi__tui__app__tests__snapshot_provider_error.snap  rusty_pi__tui__app__tests__snapshot_streaming.snap  (+6 more)
rusty-pi/tests/: binary_smoke.rs  documentation_contract.rs  pty_smoke.rs
(+42 files in other folders)
