[package]
name = "rusty-pi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1.89"
futures-util = "0.3.33"
similar = "3.1.1"
base64 = "0.22"
unicode-normalization = "0.1"
sha2 = "0.11.0"
hex = "0.4.3"
url = "2.5.8"
rand = "0.10.2"
regex = "1.11.1"
toml = "0.8"
rustyline = "15"

[dev-dependencies]
tempfile = "3.27.0"
